# jerryscript-esp

./: CMakeLists.txt  README.md  jerryscript-config.h  jerryscript-libm.c  jerryscript-port-default.c  jerryscript.h
addons/: common.c  common.h  console.c  console.h
