idf_component_register(SRCS "jerryscript-config.h"
                            "jerryscript-libm.c" "math.h"
                            "jerryscript-port-default.c" "jerryscript-port-default.h"
                            "jerryscript.c" "jerryscript.h"
                            "addons/common.c" "addons/common.h"
                            "addons/console.c" "addons/console.h"
                    INCLUDE_DIRS ".")